@@ -1,3 +1,7 @@
+2010-05-29 MA Yue <velly.empire@gmail.com>
+
+    * Add the 'reset gnome configuration settings'
+
 2010-05-23 Devil Wang <wxjeacen@gmail.com>
 
     * Add a lot of software for Fedora
